@@ -1,13 +1,13 @@
 application/x-mrproject
-	description=Project Plan
-	icon_filename=gnome-application-x-planner
+	_description=Project Plan
+	icon_filename=gnome-mime-application-x-planner
 	default_action_type=application
-	category=Documents/ProjectManagement
+	_category=Documents/Project Management
 	short_list_application_ids=planner
 
 application/x-planner
-	description=Project Plan
-	icon_filename=gnome-application-x-planner
+	_description=Project Plan
+	icon_filename=gnome-mime-application-x-planner
 	default_action_type=application
-	category=Documents/ProjectManagement
+	_category=Documents/Project Management
 	short_list_application_ids=planner
