@@ -1,3 +1,7 @@
+2004-10-05  Richard Hult  <richard@imendio.com>
+
+	* sv.po: Update.
+
 2004-10-05  David Lodge <dave@cirt.net>
                                                                                 
         * en_GB.po: Updated British English translation.
